<resources>
    <string name="app_name">TicTacToe</string>
    <string name="one_player">One Player</string>
    <string name="two_players">Two Players</string>
    <string name="change_to_one_player">Change to 1 Player</string>
    <string name="change_to_two_players">Change to 2 Players</string>
    <string name="reset">Reset</string>
    <string name="playing">Playing: Player %s</string>
    <string name="draw">Draw</string>
    <string name="won">Player %s won!</string>
    <string name="three_by_three">3 X 3</string>
    <string name="four_by_four">4 X 4</string>
    <string name="five_by_five">5 X 5</string>
    <string name="scoreboard">Score Board</string>
    <string name="type_Of_game">Game</string>
    <string name="x_wins">X Wins</string>
    <string name="o_wins">O Wins</string>
    <string name="draws">Draws</string>
    <string name="play_as_x">Play as X when playing against computer</string>
</resources>
