<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="48dp"
        android:background="@android:color/black"
        android:orientation="vertical"
        tools:context="com.example.android.tictactoe.MainActivity">

        <Button
            android:id="@+id/btn3by3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/rectangle_3"
            android:text="@string/three_by_three" />

        <Button
            android:id="@+id/btn4by4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:layout_weight="1"
            android:background="@drawable/rectangle_3"
            android:text="@string/four_by_four" />

        <Button
            android:id="@+id/btn5by5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:layout_weight="1"
            android:background="@drawable/rectangle_3"
            android:text="@string/five_by_five" />

        <Button
            android:id="@+id/btnscoreboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:layout_weight="1"
            android:background="@drawable/rectangle_3"
            android:text="@string/scoreboard" />

        <CheckBox
            android:id="@+id/play_as_x"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text = "@string/play_as_x"
            android:paddingLeft="24dp"
            android:onClick="playAsXClicked"
            android:textColor="@android:color/white"
            android:checked="true"/>
    </LinearLayout>


</ScrollView>
