<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:background="@android:color/black"
        android:orientation="vertical"
        tools:context="com.example.android.tictactoe.ScoreBoard">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtScoreBoard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@android:color/black"
                android:text="@string/scoreboard"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.example.android.tictactoe.DynamicSquareLayout
                    android:id="@+id/txtGameType"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/rectangle"
                    android:gravity="center"
                    android:text="@string/type_Of_game"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="24sp" />

                <com.example.android.tictactoe.DynamicSquareLayout
                    android:id="@+id/xWins"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/rectangle"
                    android:gravity="center"
                    android:text="@string/x_wins"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="24sp" />

                <com.example.android.tictactoe.DynamicSquareLayout
                    android:id="@+id/oWins"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/rectangle"
                    android:gravity="center"
                    android:text="@string/o_wins"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="24sp" />

                <com.example.android.tictactoe.DynamicSquareLayout
                    android:id="@+id/draws"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/rectangle"
                    android:gravity="center"
                    android:text="@string/draws"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.example.android.tictactoe.DynamicSquareLayout
                    android:id="@+id/threeby3"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/rectangle"
                    android:gravity="center"
                    android:text="@string/three_by_three"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="24sp" />

                <com.example.android.tictactoe.DynamicSquareLayout
                    android:id="@+id/threeby3Xwins"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/rectangle"
                    android:gravity="center"
                    android:text=" "
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="24sp" />

                <com.example.android.tictactoe.DynamicSquareLayout
                    android:id="@+id/threeby3Owins"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/rectangle"
                    android:gravity="center"
                    android:text=" "
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="24sp" />

                <com.example.android.tictactoe.DynamicSquareLayout
                    android:id="@+id/threeby3Draws"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/rectangle"
                    android:gravity="center"
                    android:text=" "
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="24sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.example.android.tictactoe.DynamicSquareLayout
                    android:id="@+id/fourby4"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/rectangle"
                    android:gravity="center"
                    android:text="@string/four_by_four"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="24sp" />

                <com.example.android.tictactoe.DynamicSquareLayout
                    android:id="@+id/fourby4Xwins"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/rectangle"
                    android:gravity="center"
                    android:text=" "
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="24sp" />

                <com.example.android.tictactoe.DynamicSquareLayout
                    android:id="@+id/fourby4Owins"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/rectangle"
                    android:gravity="center"
                    android:text=" "
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="24sp" />

                <com.example.android.tictactoe.DynamicSquareLayout
                    android:id="@+id/fourby4Draws"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/rectangle"
                    android:gravity="center"
                    android:text=" "
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="24sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.example.android.tictactoe.DynamicSquareLayout
                    android:id="@+id/fiveby5"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/rectangle"
                    android:gravity="center"
                    android:text="@string/five_by_five"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="24sp" />

                <com.example.android.tictactoe.DynamicSquareLayout
                    android:id="@+id/fiveby5Xwins"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/rectangle"
                    android:gravity="center"
                    android:text=" "
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="24sp" />

                <com.example.android.tictactoe.DynamicSquareLayout
                    android:id="@+id/fiveby5Owins"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/rectangle"
                    android:gravity="center"
                    android:text=" "
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="24sp" />

                <com.example.android.tictactoe.DynamicSquareLayout
                    android:id="@+id/fiveby5Draws"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/rectangle"
                    android:gravity="center"
                    android:text=" "
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="24sp" />

            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_reset_scoreboard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/rectangle_3"
                android:text="@string/reset"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>
    </LinearLayout>
</ScrollView>
