<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:background="@android:color/black"
        android:orientation="vertical"
        tools:context="com.example.android.tictactoe.FourActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_one_player"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_gravity="left"
                android:layout_marginLeft="16dp"
                android:layout_weight="1"
                android:background="@drawable/rectangle_3"
                android:text="@string/one_player" />

            <Button
                android:id="@+id/btn_two_player"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_gravity="right"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_weight="1"
                android:background="@drawable/rectangle_3"
                android:text="@string/change_to_two_players" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtPlaying"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@android:color/black"
                android:text="@string/playing"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.example.android.tictactoe.DynamicSquareLayout
                    android:id="@+id/txtB00"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/rectangle"
                    android:gravity="center"
                    android:text=" "
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="30sp" />

                <com.example.android.tictactoe.DynamicSquareLayout
                    android:id="@+id/txtB01"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/rectangle"
                    android:gravity="center"
                    android:text=" "
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="30sp" />

                <com.example.android.tictactoe.DynamicSquareLayout
                    android:id="@+id/txtB02"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/rectangle"
                    android:gravity="center"
                    android:text=" "
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="30sp" />

                <com.example.android.tictactoe.DynamicSquareLayout
                    android:id="@+id/txtB03"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/rectangle"
                    android:gravity="center"
                    android:text=" "
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="30sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.example.android.tictactoe.DynamicSquareLayout
                    android:id="@+id/txtB10"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/rectangle"
                    android:gravity="center"
                    android:text=" "
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="30sp" />

                <com.example.android.tictactoe.DynamicSquareLayout
                    android:id="@+id/txtB11"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/rectangle"
                    android:gravity="center"
                    android:text=" "
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="30sp" />

                <com.example.android.tictactoe.DynamicSquareLayout
                    android:id="@+id/txtB12"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/rectangle"
                    android:gravity="center"
                    android:text=" "
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="30sp" />

                <com.example.android.tictactoe.DynamicSquareLayout
                    android:id="@+id/txtB13"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/rectangle"
                    android:gravity="center"
                    android:text=" "
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="30sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.example.android.tictactoe.DynamicSquareLayout
                    android:id="@+id/txtB20"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/rectangle"
                    android:gravity="center"
                    android:text=" "
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="30sp" />

                <com.example.android.tictactoe.DynamicSquareLayout
                    android:id="@+id/txtB21"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/rectangle"
                    android:gravity="center"
                    android:text=" "
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="30sp" />

                <com.example.android.tictactoe.DynamicSquareLayout
                    android:id="@+id/txtB22"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/rectangle"
                    android:gravity="center"
                    android:text=" "
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="30sp" />

                <com.example.android.tictactoe.DynamicSquareLayout
                    android:id="@+id/txtB23"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/rectangle"
                    android:gravity="center"
                    android:text=" "
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="30sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.example.android.tictactoe.DynamicSquareLayout
                    android:id="@+id/txtB30"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/rectangle"
                    android:gravity="center"
                    android:text=" "
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="30sp" />

                <com.example.android.tictactoe.DynamicSquareLayout
                    android:id="@+id/txtB31"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/rectangle"
                    android:gravity="center"
                    android:text=" "
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="30sp" />

                <com.example.android.tictactoe.DynamicSquareLayout
                    android:id="@+id/txtB32"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/rectangle"
                    android:gravity="center"
                    android:text=" "
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="30sp" />

                <com.example.android.tictactoe.DynamicSquareLayout
                    android:id="@+id/txtB33"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/rectangle"
                    android:gravity="center"
                    android:text=" "
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="30sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/rectangle_3"
                android:text="@string/reset"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>
